# CISC-361-Programming-Assignment-02

./: .gitignore  CMakeLists.txt  Makefile  Programming-Assignment-03-README.md  README.md  bigmeme  get_path.c  get_path.h  get_path_main.c  linked_list.c  linked_list.h  main.c  mem  meme  mysh  sh.c  sh.h  test  test-1+2  test-1+2.c  test1  test2  watchmail_list.c  watchmail_list.h  watchuser_list.c  watchuser_list.h
starter shell/: main.c  sh.c  sh.h
